adjusted width of images in vegetables page to 100% due to alignment issues

--- a/css/style2.css
+++ b/css/style2.css
@@ -150,7 +150,8 @@ main {
 #shop img {
 
 
-    margin-right: 20px;
+    
+    width: 100%;
 }
 
 #prodimg {
@@ -227,7 +228,8 @@ main {
 #seeds img {
 
 
-    margin-right: 20px;
+    
+    width: 100%;
 }
 
 #seedimg {
